tests/workflows/tests/snapshots/rebuild__rebuild_allow_policy_dry_run_envelope.snap
---
source: tests/workflows/tests/rebuild.rs
expression: envelope
---
{
  "dry_run": true,
  "packages": [
    {
      "name": "amber-playwright",
      "version": "1.0.0",
      "scripts": {
        "postinstall": "playwright install"
      },
      "trusted": false
    },
    {
      "name": "green-native",
      "version": "1.0.0",
      "scripts": {
        "postinstall": "node build.js"
      },
      "trusted": false
    }
  ]
}
